# CPR

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: requirements.txt  train_cifar100_task.py  train_grokking_task.py  train_resnet.py
pytorch_cpr/: __init__.py  adamcpr.py  group_parameter.py  optim_cpr.py  wrapper.py
tests/: model.py  test_adamcpr.py  test_group_parameter.py  test_optim_cpr.py  test_wrapper.py
